--- a/hooks/install
+++ b/hooks/install
@@ -17,4 +17,4 @@ for dep in ${DEPS[@]}; do
     check_and_install ${PYTHON} ${dep}
 done
 
-exec ./hooks/neutron_api_hooks.py
+exec ./hooks/install.real
